--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,22 +10,47 @@ server.port=8082
 
 
 # H2 Database URL
-spring.datasource.url=jdbc:h2:mem:testdb
+#spring.datasource.url=jdbc:h2:mem:testdb
 
 # H2 Database username
-spring.datasource.username=sa
+# spring.datasource.username=sa
 
 # H2 Database password
 # spring.datasource.password=
 
 # Hibernate dialect for H2
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+# spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 # Enable H2 console (optional, for web access to the H2 database)
-spring.h2.console.enabled=true
+# spring.h2.console.enabled=true
 
 # Show SQL statements (optional, useful for debugging)
 spring.jpa.show-sql=true
 
 # Format SQL statements
 spring.jpa.properties.hibernate.format_sql=true
+
+
+image.path=C:\\Users\\rasto\\Desktop\\ecommerce\\images
+
+jwtsecretkey=qwertyuiopasdfghjklzxcvbnm1q2w3e
+
+jwtExpiry=1200000000
+
+spring.ecom.jwtCookie=jwtCookie
+
+spring.main.allow-circular-references= true
+
+
+
+
+#SQL Related Configuration
+spring.datasource.url=jdbc:mysql://localhost:3306/ecommerce
+spring.datasource.username=root
+spring.datasource.password=Satyam@2000
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+
+
+
